--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dynamic = ["version"]
 description = ""
 dependencies = [
     "fastapi",
+    "jinja2",
     "PyAutoGUI",
     "ruamel.yaml",
     "typer",
